# ChatDev2

./: .dockerignore  .env.ollama  .gitignore  .replit  CLAUDE.md  ChatDev_README.md  Dockerfile  INTEGRATION_GUIDE.md  MODULAR_MODELS_README.md  Makefile  NESTED_WORKSPACE_README.md  README.md  README_DOCKER.md  ecoscan  error_reporter.py  local_summary.md  pyproject.toml  replit.md  requirements.txt  run_ollama.py  snippets.md  start.sh  tracing_setup.py  wiki.md
ecosystem/Dev-Mentor/: .aider.conf.yml  .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .replit  .trivyignore  ACTIVATION_SUMMARY.txt  AGENTS.md  AGENT_BRIEFING.md  BOOTSTRAP.md  BOOTSTRAP_UNIFIED.md  CLAUDE.md  COMPLETE_PHASE_INDEX_1_60.md  COMPLETION_CERTIFICATE_SESSION_2.txt  CONTEXT.md  DECISION_REGISTRY_QUERIES.sh  DELIVERY_CHECKLIST.md  Dev-Mentor-Complete.code-workspace  Dev-Mentor.code-workspace  DevMentorWorkspace.workspace.json  Dockerfile  Dockerfile.bridge  Dockerfile.chatdev  Dockerfile.mcp  Dockerfile.mcp.mini  Dockerfile.rimworld  Dockerfile.router  ECOSYSTEM.md  ECOSYSTEM_ROADMAP.md  GORDON.md  GORDON_ACTIVATION_PROTOCOL_v1.md  GORDON_COMPREHENSIVE_AUDIT_REPORT.md  GORDON_FINAL_EXECUTIVE_BRIEF.md  GORDON_NODE_APOTHEOSIS.md  GORDON_NODE_SUMMARY.txt  GORDON_ORCHESTRATION.md  HANDOFF.md  HANDOFF_NEXT_SESSION.md  (+72 more)
ecosystem/Dev-Mentor/.agents/: AIDER.md  CHATDEV.md  CHATGPT.md  CLAUDE.md  CODEX.md  CONTINUE.md  COPILOT.md  CURSOR.md  DEVIN.md  LM_STUDIO.md  OLLAMA.md  SERENA.md  SKYCLAW.md
ecosystem/Dev-Mentor/.claude/: CLAUDE.md
ecosystem/Dev-Mentor/.devcontainer/: devcontainer.json
ecosystem/Dev-Mentor/.github/: copilot-instructions.md
ecosystem/Dev-Mentor/.serena/: project.yml
ecosystem/Dev-Mentor/.substrate/: culture_ship_substrate_bridge.py  msgx.schema.json  omniatag.schema.json  registry.jsonl
ecosystem/Dev-Mentor/agents/: __init__.py  agent_base.py  challenge_generator.py  content_generator.py  documenter.py  implementer.py  llm_agent.py  lore_generator.py  orchestrator.py  player.py  schedules.yaml  tester.py  validator.py
ecosystem/Dev-Mentor/app/: lattice.py  rimworld_bridge.py
ecosystem/Dev-Mentor/bootstrap/: README.md  td_docker.sh  td_node.js  td_quickstart.ps1  td_quickstart.py  td_quickstart.sh
ecosystem/Dev-Mentor/bridges/: mock_llm_bridge.py
ecosystem/Dev-Mentor/cli/: devmentor.py  play.py
ecosystem/Dev-Mentor/config/: autoboot.py  dependencies.yaml  ecosystem_state.yaml  gordon.yaml  models.yaml  port_map.json  router.yml  runtime.py
ecosystem/Dev-Mentor/core/: __init__.py  agent_bus.py  bridge_inventory.py  environment.py  port_resolver.py  process_discovery.py  suggest.py
ecosystem/Dev-Mentor/docs/: AI_MODE.md  AI_UNIVERSE_INTERFACE_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  COMMANDS_REFERENCE.md  DEPENDENCY_GRAPH.md  DEVELOPMENT_FINDINGS.md  FEATURE_BACKLOG.md  FINETUNE_GUIDE.md  MODDING.md  NEXT_ACTIONS.md  OPS_ZERO_TOKEN.md  PORTABILITY.md  REPLIT_MODE.md  ROUTER.md  RUNTIME_VSCODE.md  STACK_MODE.md  STATUS.md  WELCOME_REPLIT.md  ai_tooling_research.md
ecosystem/Dev-Mentor/k8s/: deployment.yaml
ecosystem/Dev-Mentor/knowledge/: README.md  content_manifest.json  coverage_report.json  last_playtest.json  player_report_scripting.json  tester_results.json
ecosystem/Dev-Mentor/mcp/: server.py
ecosystem/Dev-Mentor/plugins/: manager.py
ecosystem/Dev-Mentor/reports/: chug_status.md  error_analysis_20260317_122019.md  error_analysis_20260318_122131.md  error_analysis_20260319_122545.md  error_analysis_20260320_122918.md  error_analysis_20260322_101930.md  latest.md  plan.md  tree.md
ecosystem/Dev-Mentor/rimworld_mod/: README.md
ecosystem/Dev-Mentor/scripts/: activate-ecosystem.ps1  agent_output_watcher.py  agent_status.py  ai_analyze.py  bootstrap_local.sh  bootstrap_windows.ps1  bridge_inventory.py  cascade.sh  chatdev_stub.py  chatdev_tasks.json  chatdev_worker.py  code_generator.py  content_scheduler.py  culture_ship.py  dependency_resolver.py  devmentor_bootstrap.py  devmentor_detect.py  devmentor_improve.py  devmentor_ops.py  devmentor_portable.py  devmentor_status.py  devmentor_validate.py  diagnostics.py  dispatch_task.py  entrypoint.sh  finetune.py  (+61 more)
ecosystem/NuSyQ-Hub/: .coveragerc  .dependency-cruiser.js  .dependency-cruiserrc.js  .dockerignore  .env.docker  .env.example  .env.tracing  .env.workspace  .flake8  .gitattributes  .gitignore  .gitmodules  .maintenance-log-20260329-052817.txt  .pre-commit-config.yaml  .prettierrc  .pylintrc  .pytest-temp.ini  .rgignore  .ruff_e501.txt  .secrets.baseline  .semgrepignore  .sonarlintignore  ACTIVATE_NUSYQ_SYSTEM.py  ACTIVATE_SYSTEM.py  ACTIVATE_VIA_CHATDEV.md  ADAPTIVE_AI_COMPLETE.md  AGENTS.md  AGENT_RPG_SYSTEM.md  AI_AGENT_COORDINATION_MASTER.py  AI_AGENT_QUICK_REFERENCE.md  AUDIT_COMPLETE_SUMMARY_2026-02-28.md  AUTONOMOUS_SYSTEM_PROOF.md  AUTONOMOUS_WORKFLOWS_GUIDE.md  BATCH_3_CONSOLIDATION_COMPLETE.md  BATCH_4_DEVELOPMENT_SUMMARY.py  BATCH_4b_IMPLEMENTATION_STATUS.md  BATCH_7_EXECUTION_PLAN.md  CAPABILITIES.md  CHANGELOG.md  CHANGELOG_SESSION.md  (+373 more)
ecosystem/NuSyQ_Ultimate/: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .sonarlintignore  Bug_Fix_Validation_Report.md  ChatDev_Bug_Fixes_Complete_Summary.md  ChatDev_Capabilities_Assessment.md  ChatDev_Error_Debugging_Summary.md  ChatDev_Log_File_Bug_Fix.md  ChatDev_Modernization_FINAL_SUMMARY.md  ChatDev_Modernization_Session_20251011.md  ChatDev_Modular_Models_Implementation_SUCCESS.md  Dockerfile  Edge_Case_Bug_Hunting_Success.md  Guide_Contributing_AllUsers.md  IMPLEMENTATION_COMPLETE.md  KNOWLEDGE_BASE_INTEGRATION.md  KnowledgeBase.md  MCP_FIXES_COMPLETE.md  NESTED_WORKSPACE_README.md  NUSYQ_IMPROVEMENTS_COMPLETE.md  NuSyQ.Orchestrator.ps1  NuSyQ.code-workspace  NuSyQ_OmniTag_System_Reference.md  NuSyQ_Root_README.md  PERFORMANCE_ENHANCEMENTS_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_DOCKER.md  SYSTEM_STATUS_REPORT.md  Task_4_Complete_Analysis.md  __init__.py  fix_knowledge_base.py  knowledge-base.yaml  mcp_server_runtime.err  nusyq.manifest.yaml.txt  pyproject.toml  (+9 more)
(+28352 files in other folders)
