[project]
name = "terminal-depths"
version = "0.1.0"
description = "Terminal Depths — AI-powered hacking RPG game engine (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "aiofiles>=25.1.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    # CLI / UI
    "rich>=14.2.0",
    "typer>=0.21.1",
    # Auth / Security
    "PyJWT>=2.8.0",
    # Config / Serialization
    "pyyaml>=6.0.1",
    # Async / Infrastructure
    "redis>=5.0.4",
    # AI / LLM backends
    "openai>=1.0.0",
    # RL Phase 3 (PPO) + signal processing
    "numpy>=2.0.0",
    "scipy>=1.10.0",
]
